# nested-pdf-merger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom_sort_functions.py
src/nestedpdfmerger/: __init__.py  __main__.py  bookmarks.py  cli.py  config.py  errors.py  merger.py  sorting.py
tests/: test_merger.py
