[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestedpdfmerger"
version = "1.0.0"
description = "Merge PDFs recursively from a folder tree into a single PDF with hierarchical bookmarks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["pdf", "merge", "bookmarks", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pypdf>=4.0",
    "natsort>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
nestedpdfmerger = "nestedpdfmerger.cli:main"

[project.urls]
Repository = "https://github.com/Lyutenant/nested-pdf-merger"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["script.py", "examples/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
